# SSL_HAR

./: README.md  pyproject.toml  requirements.txt
configs/: supervised_baseline_balanced.json
configs/paper/: subjectwise_balanced.json  subjectwise_exact.json
docs/: reproduction.md
notebooks/: experiments_final_submission_subjectwise_balanced_v2.ipynb  experiments_final_submission_subjectwise_exact_v2.ipynb  supervised_baseline_subjectwise_balanced_colab_seed_19.ipynb  supervised_baseline_subjectwise_balanced_colab_seed_42.ipynb  supervised_baseline_subjectwise_balanced_colab_seed_7.ipynb
notebooks/reference/: supervised_baseline_subjectwise_balanced_colab_seed_19.ipynb  supervised_baseline_subjectwise_balanced_colab_seed_42.ipynb
scripts/: run_ssl_experiment.py  run_supervised_baseline.py
ssl_har_reliability/: __init__.py  augmentations.py  experiment.py  metrics.py
ssl_har_reliability/analysis/: __init__.py  transitions.py
ssl_har_reliability/data/: __init__.py  hhar.py  motionsense.py  pamap2.py  ucihar.py  unified.py
ssl_har_reliability/models/: __init__.py  backbone.py  simclr.py  softclt.py  tfc.py  tstcc.py
ssl_har_reliability/training/: __init__.py  evaluate.py  pretrain.py
